# MangaPDF-Maker

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: Publish.yml
scripts/: nuitka_flet.yml
src/: __main__.py  core.py  logger_config.py  main.py  test.py  version.py
tools/: pack.py
