[project]
name = "mangapdf-maker"
version = "0.1.4"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "YanMing", email = "you@example.com" }
]
dependencies = [
  "flet==0.26.0",
  "Pillow==11.1.0",
  "PyPDF2==3.0.1",
  "PySimpleGUI==5.0.8",
  "PySimpleGUI==5.0.8",
  "rich==13.9.4"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "mangapdf-maker"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

compile.app = true # --compile-app
compile.packages = true # --compile-packages
compile.cleanup = true # --cleanup-on-compile

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.26.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.26.0"}