[project]
name = "mangapdf-maker"
version = "1.4.3"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "YanMing", email = "lxb-yanming@foxmail.com" }
]
dependencies = [
  "flet==0.27.1",
  "Pillow==11.1.0",
  "pypdf==5.3.0",
  "Requests==2.32.3",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
# org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "MangaPDF-Maker"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

compile.app = true # --compile-app
compile.packages = true # --compile-packages
compile.cleanup = true # --cleanup-on-compile

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.1",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.1"}